fix: remove extra catalog container scroll, fix routing page duplication, correct layout z-index

--- a/src/components/_sections/MainSection/MainSection.module.sass
+++ b/src/components/_sections/MainSection/MainSection.module.sass
@@ -1,6 +1,6 @@
 @import '../../../styles/variables'
 
-.cover-container
+.cover
     padding-block: 7.8rem
     padding-inline: 5rem
     inline-size: 100%
@@ -18,7 +18,6 @@
     color: $bg-color
 
 .container
-    position: relative
     z-index: 101
     display: flex
     flex-wrap: wrap
@@ -29,6 +28,9 @@
     background: $bg-color
     border-radius: 15px
 
+    &_focus
+        position: relative
+        z-index: 101
 .button
     position: relative
     display: flex
@@ -42,6 +44,13 @@
     border-radius: 10px
     background: $bg-color
     cursor: pointer
+
+.arrow
+    transform: rotate(-90deg)
+    transition: transform .5s
+
+    &_open
+        transform: rotate(0)
 
 .modalBackdrop
     position: fixed
